
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint8 ;


 int RC4_set_key (int *,int,int *) ;
 int memcpy (int *,int *,int) ;
 int rc4_decrypt_key ;
 int rc4_encrypt_key ;
 int rc4_key_len ;
 int * sec_decrypt_key ;
 int * sec_decrypt_update_key ;
 int * sec_encrypt_key ;
 int * sec_encrypt_update_key ;
 int sec_hash_16 (int *,int *,int *,int *) ;
 int sec_hash_48 (int *,int *,int *,int *,int) ;
 int sec_make_40bit (int *) ;
 int * sec_sign_key ;

__attribute__((used)) static void
sec_generate_keys(uint8 * client_key, uint8 * server_key, int rc4_key_size)
{
 uint8 session_key[48];
 uint8 temp_hash[48];
 uint8 input[48];


 memcpy(input, client_key, 24);
 memcpy(input + 24, server_key, 24);


 sec_hash_48(temp_hash, input, client_key, server_key, 65);
 sec_hash_48(session_key, temp_hash, client_key, server_key, 88);


 memcpy(sec_sign_key, session_key, 16);


 sec_hash_16(sec_decrypt_key, &session_key[16], client_key, server_key);
 sec_hash_16(sec_encrypt_key, &session_key[32], client_key, server_key);

 if (rc4_key_size == 1)
 {

  sec_make_40bit(sec_sign_key);
  sec_make_40bit(sec_decrypt_key);
  sec_make_40bit(sec_encrypt_key);
  rc4_key_len = 8;
 }
 else
 {

  rc4_key_len = 16;
 }


 memcpy(sec_decrypt_update_key, sec_decrypt_key, 16);
 memcpy(sec_encrypt_update_key, sec_encrypt_key, 16);


 RC4_set_key(&rc4_decrypt_key, rc4_key_len, sec_decrypt_key);
 RC4_set_key(&rc4_encrypt_key, rc4_key_len, sec_encrypt_key);
}
