; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_8469.c_sec_generate_keys.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_8469.c_sec_generate_keys.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@sec_sign_key = common dso_local global i32* null, align 8
@sec_decrypt_key = common dso_local global i32* null, align 8
@sec_encrypt_key = common dso_local global i32* null, align 8
@rc4_key_len = common dso_local global i32 0, align 4
@sec_decrypt_update_key = common dso_local global i32* null, align 8
@sec_encrypt_update_key = common dso_local global i32* null, align 8
@rc4_decrypt_key = common dso_local global i32 0, align 4
@rc4_encrypt_key = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i32)* @sec_generate_keys to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sec_generate_keys(i32* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca [48 x i32], align 16
  %8 = alloca [48 x i32], align 16
  %9 = alloca [48 x i32], align 16
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %10 = getelementptr inbounds [48 x i32], [48 x i32]* %9, i64 0, i64 0
  %11 = load i32*, i32** %4, align 8
  %12 = call i32 @memcpy(i32* %10, i32* %11, i32 24)
  %13 = getelementptr inbounds [48 x i32], [48 x i32]* %9, i64 0, i64 0
  %14 = getelementptr inbounds i32, i32* %13, i64 24
  %15 = load i32*, i32** %5, align 8
  %16 = call i32 @memcpy(i32* %14, i32* %15, i32 24)
  %17 = getelementptr inbounds [48 x i32], [48 x i32]* %8, i64 0, i64 0
  %18 = getelementptr inbounds [48 x i32], [48 x i32]* %9, i64 0, i64 0
  %19 = load i32*, i32** %4, align 8
  %20 = load i32*, i32** %5, align 8
  %21 = call i32 @sec_hash_48(i32* %17, i32* %18, i32* %19, i32* %20, i32 65)
  %22 = getelementptr inbounds [48 x i32], [48 x i32]* %7, i64 0, i64 0
  %23 = getelementptr inbounds [48 x i32], [48 x i32]* %8, i64 0, i64 0
  %24 = load i32*, i32** %4, align 8
  %25 = load i32*, i32** %5, align 8
  %26 = call i32 @sec_hash_48(i32* %22, i32* %23, i32* %24, i32* %25, i32 88)
  %27 = load i32*, i32** @sec_sign_key, align 8
  %28 = getelementptr inbounds [48 x i32], [48 x i32]* %7, i64 0, i64 0
  %29 = call i32 @memcpy(i32* %27, i32* %28, i32 16)
  %30 = load i32*, i32** @sec_decrypt_key, align 8
  %31 = getelementptr inbounds [48 x i32], [48 x i32]* %7, i64 0, i64 16
  %32 = load i32*, i32** %4, align 8
  %33 = load i32*, i32** %5, align 8
  %34 = call i32 @sec_hash_16(i32* %30, i32* %31, i32* %32, i32* %33)
  %35 = load i32*, i32** @sec_encrypt_key, align 8
  %36 = getelementptr inbounds [48 x i32], [48 x i32]* %7, i64 0, i64 32
  %37 = load i32*, i32** %4, align 8
  %38 = load i32*, i32** %5, align 8
  %39 = call i32 @sec_hash_16(i32* %35, i32* %36, i32* %37, i32* %38)
  %40 = load i32, i32* %6, align 4
  %41 = icmp eq i32 %40, 1
  br i1 %41, label %42, label %49

42:                                               ; preds = %3
  %43 = load i32*, i32** @sec_sign_key, align 8
  %44 = call i32 @sec_make_40bit(i32* %43)
  %45 = load i32*, i32** @sec_decrypt_key, align 8
  %46 = call i32 @sec_make_40bit(i32* %45)
  %47 = load i32*, i32** @sec_encrypt_key, align 8
  %48 = call i32 @sec_make_40bit(i32* %47)
  store i32 8, i32* @rc4_key_len, align 4
  br label %50

49:                                               ; preds = %3
  store i32 16, i32* @rc4_key_len, align 4
  br label %50

50:                                               ; preds = %49, %42
  %51 = load i32*, i32** @sec_decrypt_update_key, align 8
  %52 = load i32*, i32** @sec_decrypt_key, align 8
  %53 = call i32 @memcpy(i32* %51, i32* %52, i32 16)
  %54 = load i32*, i32** @sec_encrypt_update_key, align 8
  %55 = load i32*, i32** @sec_encrypt_key, align 8
  %56 = call i32 @memcpy(i32* %54, i32* %55, i32 16)
  %57 = load i32, i32* @rc4_key_len, align 4
  %58 = load i32*, i32** @sec_decrypt_key, align 8
  %59 = call i32 @RC4_set_key(i32* @rc4_decrypt_key, i32 %57, i32* %58)
  %60 = load i32, i32* @rc4_key_len, align 4
  %61 = load i32*, i32** @sec_encrypt_key, align 8
  %62 = call i32 @RC4_set_key(i32* @rc4_encrypt_key, i32 %60, i32* %61)
  ret void
}

declare dso_local i32 @memcpy(i32*, i32*, i32) #1

declare dso_local i32 @sec_hash_48(i32*, i32*, i32*, i32*, i32) #1

declare dso_local i32 @sec_hash_16(i32*, i32*, i32*, i32*) #1

declare dso_local i32 @sec_make_40bit(i32*) #1

declare dso_local i32 @RC4_set_key(i32*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
